--- a/BE_GOStudy/BE_GOStudy/appsettings.json
+++ b/BE_GOStudy/BE_GOStudy/appsettings.json
@@ -69,7 +69,7 @@
         "ClientSecret": "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"
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=MSI;Database=GOStudyContext1;User Id=sa;Password=YourStrong!Passw0rd;Trusted_Connection=true;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=localhost;Database=GOStudyContext6;User Id=SA;Password=MyStrongPass123;TrustServerCertificate=true;MultipleActiveResultSets=true"
     },
     "AllowedHosts": "*"
 }
