--- a/BE_GOStudy/BE_GOStudy/BE_GOStudy.csproj
+++ b/BE_GOStudy/BE_GOStudy/BE_GOStudy.csproj
@@ -10,7 +10,6 @@
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Google.Apis.Auth" Version="1.68.0" />
-    <PackageReference Include="Google.Apis.Calendar.v3" Version="1.68.0.3536" />
     <PackageReference Include="Hangfire.Core" Version="1.8.14" />
     <PackageReference Include="MailKit" Version="4.7.1" />
     <PackageReference Include="Mapster" Version="7.4.0" />
@@ -39,6 +38,7 @@
     <PackageReference Include="Serilog" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Globalization" Version="4.3.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
   </ItemGroup>
 
